2011-10-04  Bart Van Assche <bvanassche@acm.org>

	Typo fix - change func_apped into func_append
	* libltdl/config/ltmain.m4sh: Fix typo.

2011-10-02  Xin LI <d@delphij.net>

	Avoid problems when FreeBSD goes to version 10.
	* libltdl/m4/libtool.m4: Remove mentions of freebsd1. Use dots
	for FreeBSD 2 and 3 detection to avoid future problems
	* libltdl/m4/ltmain.m4sh: ditto.

2011-09-25  Cristophe Jarry <christophe.jarry@ouvaton.org>

	Avoid mentioning "Linux", use "GNU/Linux", if appropriate.
	* TODO: Don't use bare "Linux".
	* doc/libtool.texi: ditto.
	* doc/notes.texi: ditto.
	* libltdl/README: ditto.
	* libltdl/m4/libtool.m4: ditto.

2011-09-01  Peter O'Gorman  <peter@pogma.com>

	Add flag to inhibit warnings.
	* libltdl/config/ltmain.m4sh: Add --no-warn, --no-warning flags.
	Reported by John Davd Anglin.

2011-04-10  Kurt Roeckx  <kurt@roeckx.be>

	tagdemo: do not rely on picking up symbols from indirect deps.
	* tests/tagdemo/Makefile.am: Link to all libraries that the
	demo application uses.

2011-04-10  Svante Signell  <srs@kth.se>  (tiny change)

	Set shlibpath_overrides_runpath for the Hurd.
	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [gnu]
	<shlibpath_overrides_runpath>: Set to no.
	* THANKS: Update.

2011-03-22  Justin Lecher  <jlec@gentoo.org>  (tiny change)
	    Rhys Ulerich  <rhys.ulerich@gmail.com>  (tiny change)

	Don't filter OPENMP flags (-openmp & -fopenmp) from linker lines.
	* libltdl/config/ltmain.m4sh (func_mode_link): Treat OpenMP
	flags like pthreads flags.

2011-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	libtoolize: detect -I<dir> (without space) in ACLOCAL_AMFLAGS.
	* libtoolize.m4sh (func_scan_files): Also accept -I<dir>
	(without intervening space) in ACLOCAL_AMFLAGS.
	* THANKS: Update.
	Report from Jan Engelhardt.

2011-03-04  Peter O'Gorman  <peter@pogma.com>

	On Mac OS X try .dylib as well as .so with lt_dlopenext
	* libltdl/m4/ltdl.m4: Define extra extension if module extension
	differs from shared lib extension.